versioned_docs/version-2025.2.3/professor/jael_dos_santos.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Jael dos Santos",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "História II - 1234",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2024A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "História I - 1224",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Política educacional: organização da educação brasileira",
          "size": 2,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "a_definir",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "História III - 2236",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "História I - 1224",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "História III - 2236",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_5",
          "students": [
            "IIW2023A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "História II - 1234",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2024A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "História III - 2236",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_5",
          "students": [
            "IIW2023A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "História II - 1234",
          "size": 2,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "História III - 2236",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Jael dos Santos

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
